Remove status bar coloring and add launcher icon

--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -1,30 +1,22 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:aapt="http://schemas.android.com/aapt"
+    xmlns:tools="http://schemas.android.com/tools"
     android:width="108dp"
     android:height="108dp"
-    android:viewportWidth="108"
-    android:viewportHeight="108">
-    <path android:pathData="M31,63.928c0,0 6.4,-11 12.1,-13.1c7.2,-2.6 26,-1.4 26,-1.4l38.1,38.1L107,108.928l-32,-1L31,63.928z">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="85.84757"
-                android:endY="92.4963"
-                android:startX="42.9492"
-                android:startY="49.59793"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
-        </aapt:attr>
-    </path>
-    <path
-        android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:pathData="M65.3,45.828l3.8,-6.6c0.2,-0.4 0.1,-0.9 -0.3,-1.1c-0.4,-0.2 -0.9,-0.1 -1.1,0.3l-3.9,6.7c-6.3,-2.8 -13.4,-2.8 -19.7,0l-3.9,-6.7c-0.2,-0.4 -0.7,-0.5 -1.1,-0.3C38.8,38.328 38.7,38.828 38.9,39.228l3.8,6.6C36.2,49.428 31.7,56.028 31,63.928h46C76.3,56.028 71.8,49.428 65.3,45.828zM43.4,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2c-0.3,-0.7 -0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C45.3,56.528 44.5,57.328 43.4,57.328L43.4,57.328zM64.6,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2s-0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C66.5,56.528 65.6,57.328 64.6,57.328L64.6,57.328z"
-        android:strokeWidth="1"
-        android:strokeColor="#00000000" />
+    android:viewportWidth="5000"
+    android:viewportHeight="5000">
+
+    <group
+        android:pivotX="2500"
+        android:pivotY="2500"
+        android:scaleX=".67"
+        android:scaleY=".67">
+
+        <path
+            android:fillColor="#fe0000"
+            android:pathData="M2249.2,4986.3C1608.3,4920.4 1004.3,4601.6 595.4,4113.4 443.4,3931.9 363.1,3808.5 258.7,3595.8 137.9,3349.6 68,3126.8 26.3,2854.6 2.5,2699.2 -2.6,2355.9 16.7,2213.2 96.2,1627.4 335.8,1134.2 734.8,735.3 1123.8,346.3 1611,104.6 2172.1,22.1 2341.1,-2.7 2683.1,-0.4 2856.7,26.8 3408.6,113.2 3869,343.7 4253.9,726.3c150.6,149.7 223.3,237.4 330.7,398.9 227.7,342.6 363.5,728 404,1146.9 13.3,138.1 5.4,456.6 -14.5,584.8 -67.6,434.4 -219.6,796.3 -483.6,1151.4 -101.8,137 -344.3,379.6 -482.7,482.8 -382.5,285.4 -803.6,449.1 -1276.6,496.1 -109.8,10.9 -371.3,10.4 -481.9,-1zM2484.9,4743.6c0,-22.6 -70.4,-207.8 -112.6,-296.1 -187.6,-392.8 -480.7,-720.3 -877.9,-980.9 -307.9,-202.1 -655.5,-337.9 -954.5,-373 -108.6,-12.8 -204,-18.3 -204,-11.8 0,12.7 78.7,205.8 122.7,300.9 129.1,279.4 278.4,499.9 475,701.3 357.3,365.9 824.9,577.9 1442.6,653.8 52.4,6.4 98.3,12.2 102,12.8 3.7,0.6 6.8,-2.6 6.8,-7.1zM2688.9,4728.7c809.1,-104.6 1388.4,-486.1 1761.5,-1160.1 86.1,-155.5 229.3,-483.3 212.3,-486 -22.4,-3.6 -153.6,3.1 -210.1,10.7 -417.5,56.1 -893.2,286.8 -1251.3,607 -254.4,227.4 -447.5,480.8 -576,755.9 -39.4,84.2 -104,259.7 -104,282.3 0,8.5 8.9,11 29.5,8.2 16.2,-2.2 78.4,-10.3 138.3,-18l0,0zM2643.5,3251.2c154.4,-32.7 271.3,-92.3 377.6,-192.6 105.9,-99.9 168.7,-193.2 212.5,-337.6 22,-72.4 34.5,-181.1 32.4,-216.8 -3.9,-64.4 -9,-148.7 -31.7,-222.9 -80.6,-263.3 -290.1,-460.8 -558.9,-526.7 -96.8,-23.7 -269,-21.8 -367.2,4.2 -266.6,70.6 -479.5,283.5 -549.7,549.7 -27,102.5 -26.9,278.9 0.2,380.8 79.1,296.9 317.4,516.1 616,566.4 70.7,11.9 201.8,9.7 268.9,-4.5l0,0zM589.8,1899.4c175.5,-26.8 360.1,-84.6 566.7,-177.5 531.4,-239 1015,-710.5 1232.5,-1201.8 31,-70 95.9,-247.5 95.9,-262.3 0,-7 -63.4,-1.7 -188.2,15.7 -740.9,103.5 -1280.6,430.1 -1649.3,998.1 -82.8,127.6 -199.5,357 -260.8,512.6 -27.9,70.8 -50.7,131.2 -50.7,134.4 0,8 149.9,-3.4 253.9,-19.3l0,0zM4663.1,1918.1c2.7,-2.7 -16.8,-59.8 -43.3,-126.8C4414.4,1272.4 4117.8,889.3 3718.4,627.2 3529.8,503.4 3259.4,390.9 3001.8,328.9c-190.2,-45.8 -480.6,-86.3 -480.6,-67 0,5.1 12.6,47.5 28,94.1 41.3,125.1 151.8,343.8 240.1,475.3 343.1,510.4 916.9,910.2 1500.1,1045 120.4,27.8 360.8,54.8 373.7,41.9z"
+            android:strokeWidth="9.71993256000000017"
+            android:strokeColor="#00000000"
+            tools:ignore="VectorPath" />
+    </group>
+
 </vector>
